# C-Calculator

./: .gitignore  README.md  win-build.bat
cmake/: CMakeLists.txt
lib/operations/: add.c  divide.c  multiply.c  subtract.c
src/: calculator.c  operations.h
